Fix search form on mobiles

--- a/src/scss/components/_search-overlay.scss
+++ b/src/scss/components/_search-overlay.scss
@@ -71,6 +71,16 @@
     align-items: center;
 
     opacity: 0;
+
+    @include below(lap) {
+      flex-direction: column;
+      align-items: flex-start;
+
+      .c-search-overlay__cancel {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+      }
+    }
   }
 
   &__suggestions {
